# second-life-ai

./: .env.example  .gitignore  AGENTS.md  README.md  REVIEW_FIXES.md  demo.md  docker-compose.yml  memory.md  pyproject.toml
apps/web/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
context/: AI.md  prd.md  problems.md  project-overview.md
docs/: P3-A1-SUMMARY.md  P3-A2-deliverables.md  architecture.md  build-plan.md  code-standards.md  hardening-checklist.md  library-docs.md  progress-tracker.md  testing-guide.md  ui-registry.md  ui-rules.md  ui-tokens.md
infra/postgres/: init.sql
scripts/: README.md  dev.ps1  dev.sh  events_tail.py  seed.py  seed_min.py  smoke_test.py
services/gateway/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
services/gateway/app/: config.py  main.py
services/gateway/app/api/: debug_routes.py  middleware.py  routes.py
services/gateway/app/clients/: __init__.py  http_client.py  minio_client.py
services/gateway/app/db/: __init__.py  session.py
services/gateway/app/domain/: __init__.py  models.py  schemas.py
services/gateway/tests/: conftest.py  test_aggregation.py  test_auth_proxy.py  test_dashboard_routes.py  test_returns.py
services/grading/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
services/grading/alembic/: env.py
services/grading/alembic/versions/: 001_create_grades_table.py
services/grading/app/: config.py  main.py
services/grading/app/api/: routes.py
services/grading/app/db/: session.py
services/grading/app/domain/: models.py  schemas.py  service.py
services/grading/app/events/: handlers.py
services/grading/tests/: test_grading.py
services/lifecycle/: Dockerfile  alembic.ini  pyproject.toml
services/matching/: Dockerfile  alembic.ini  pyproject.toml
services/matching/alembic/: env.py
services/matching/alembic/versions/: 0001_create_matching_tables.py  001_create_matching_tables.py
services/matching/app/: config.py  main.py
services/matching/app/api/: routes.py
services/matching/app/db/: session.py
services/matching/app/domain/: geo.py  models.py  schemas.py  service.py
services/matching/app/events/: handlers.py
services/matching/tests/: conftest.py  test_geo.py  test_haversine.py  test_routes.py  test_service.py
services/passport/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
services/passport/alembic/: env.py
services/passport/alembic/versions/: 001_create_products_and_passports.py
services/passport/app/: config.py  main.py
services/passport/app/api/: routes.py
services/passport/app/db/: repository.py  session.py
services/passport/app/domain/: models.py  schemas.py  service.py
services/passport/app/events/: handlers.py
services/passport/tests/: test_passport.py
services/sustainability/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
services/user/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  pyproject.toml  verify_implementation.py
services/user/alembic/: env.py
services/user/alembic/versions/: 001_create_users_table.py
services/user/app/: config.py  main.py
services/user/app/api/: routes.py
services/user/app/db/: repository.py  session.py
services/user/app/domain/: models.py  schemas.py  service.py
services/user/tests/: conftest.py  test_auth.py  test_users.py
(+123 files in other folders)
