[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "gateway"
version = "0.1.0"
description = "API Gateway / BFF — Amazon Second Life AI"
requires-python = ">=3.12"
dependencies = [
    "shared-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
    "hypothesis>=6.111,<7",
    "pytest-httpx>=0.30,<1",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
