[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "grading"
version = "0.1.0"
description = "AI Grading Service — Amazon Second Life AI"
requires-python = ">=3.12"
dependencies = [
    "shared-py",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "httpx==0.27.*",
    "aiosqlite==0.20.*",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
