[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "passport"
version = "0.1.0"
description = "Product Passport Service — Amazon Second Life AI"
requires-python = ">=3.12"
dependencies = [
    "shared-py",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
