[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "user"
version = "0.1.0"
description = "User Service — auth, profile, credits — Amazon Second Life AI"
requires-python = ">=3.12"
dependencies = [
    "shared-py",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
